# captiq

./: README.md  pyproject.toml
captiq/: __init__.py  calculate.py  cli.py  config.py  const.py  exceptions.py  fees.py  logging.py  table.py  tax.py  taxcalc.py  transaction.py  trhistory.py  types.py  utils.py  year.py
captiq/parsers/: __init__.py  t212.py  types.py
captiq/providers/: __init__.py  exceptions.py  fx.py  security.py  types.py
captiq/tax/: __init__.py  gain.py  s104.py  types.py
